# pycpt

./: .gitignore  PyCPTv2.ipynb  README.md  SEASONAL_CCSM4_PRCP_HCST_JUN-SEP_None_2022-02.tsv  cca_log  configuration_test.ipynb  detskill_log  mlr_log  mypy.ini  pcr_log  pfv_log  pixi.toml  pytest.ini  setup.py  test.tsv  test1.config  test2.config
cpt-io/: LICENSE  pixi.toml  pyproject.toml  pytest.ini  setup.py  test.tsv
cpt-io/conda-recipe/: meta.yaml
cpt-io/docs/: index.md
cpt-io/src/cptio/: __init__.py  enacts.py
cpt-io/tests/: test_cptformat.py
cpt-io/tests/data/: 2afc.txt  GHCN_Jun_cptv10.tsv  cca_canonical_correlation_station.txt  forecast_prediction_error_variance.txt  forecast_probabilities_station.txt  forecast_values_station.txt  goodness_index.txt  hindcast_prediction_error_variance.txt  original_forecast_predictor  pearson-station.txt  predictand_cca_spatial_loadings_station.txt  predictand_eof_spatial_loadings.txt  predictand_eof_timeseries.txt  predictor_cca_spatial_loadings.txt  predictor_cca_timeseries.txt  predictor_eof_spatial_loadings.txt  predictor_eof_timeseries.txt  prob_rfcsts.tsv  roc_below.txt
pycpt/: README.md  pixi.toml  pyproject.toml  setup.py
pycpt/conda-recipe/: meta.yaml
pycpt/src/cptcore/: __init__.py  base.py  utilities.py
pycpt/src/cptdl/: __init__.py  catalog.py  setup.py  targetleadconv.py  utilities.py
pycpt/src/cptextras/: __init__.py  colormaps.py  configuration.py  dlcolors.py  redate.py  transformers.py  view.py
pycpt/src/pycpt/: __init__.py  automation.py  commands.py  notebook.py  subseasonal.py  upload.py
pycpt/tests/: test_automation.py  test_core.py  test_download.py  test_evaluate_models.py  test_seasonal.py  test_station.py  test_subseasonal.py  test_targetleadconv.py
pycpt/tests/data/: CCSM4.PRCP.tsv  (+2 more)
(+1037 files in other folders)
