[build-system]
requires = ["setuptools >= 78.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cptio"
version = "1.2.3.dev0"
authors = [{name = "IRI", email = "pycpt-help@iri.columbia.edu"}]
description = "Tools bridging Xarray and CPT"
readme = "README.md"
license = "MIT"
keywords = [
    "climate", 'predictability', 'prediction', 'precipitation', 'temperature', 'data', 'IRI'
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://iri.columbia.edu/our-expertise/climate/tools/"
Documentation = "https://iri-pycpt.github.io/"
Repository = "https://github.com/iri-pycpt/pycpt"
